--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
 <div class="content">
     <div class="sidebar"><a href="index.html"><img src="images/logo.png" /></a><br><br>
     	<div class="side">
-            <h3><font face="arial black">FREE PATTERN MENU</font></h3>
+            <h3><font face="arial black"><b>FREE PATTERN INDEX</b></font></h3>
             <ul>
-		<li><a href="afghan.html">Afghan Patterns</a></li>
-		<li><a href="bedspread.html">Bedspread Patterns</a></li>
-		<li><a href="round.html">Decorative Doily Patterns</a></li>
-		<li><a href="floral.html">Floral Doily Patterns</a></li>
-                <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
-                <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
-		<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
-                <li><b><a href="index.html"><font color="#ff0066"><b>->HOME<-</font></a></li>
+            
+            <ul>
+				 <li><a href="afghan.html">Afghan Patterns</a></li>		 
+				 <li><a href="bedspread.html">Bedspread Patterns</a></li>
+				 <li><a href="round.html">Decorative Doily Patterns</a></li>
+				 <li><a href="floral.html">Floral Doily Patterns</a></li>
+                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
+                 <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
+			     <li><a href="tablecloths.html">Tablecloth Patterns</a></li>
+                 <li><b><a href="index.html"><font color="#ff0066"><b>->HOME<-</font></a></li>
             </ul>
         </div>
 		
@@ -69,6 +71,7 @@
     <div class="clear"></div>
 </div>
 </div>
+<!--------------------------------------->
 
     <div class="clear"></div>
      <br><Br><center><div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
