--- a/ruffle.html
+++ b/ruffle.html
@@ -24,15 +24,15 @@
 <div class="content">
     <div class="sidebar"><a href="index.html"><img src="images/logo.png" /></a><br><br>
     	<div class="side">
-            <h3><font face="arial black">Free Crochet Index</font></h3>
+            <h3><font face="arial black"><b>FREE PATTERN INDEX</b></font></h3>
             <ul>
-		<li><a href="afghan.html">Afghan Patterns</a></li>
-		<li><a href="bedspread.html">Bedspread Patterns</a></li>
-		<li><a href="round.html"><b>Decorative Doily Patterns</b></a></li>
+				<li><a href="afghan.html">Afghan Patterns</a></li>	 
+				<li><a href="bedspread.html">Bedspread Patterns</a></li>
+				<li><a href="round.html"><b>Decorative Doily Patterns</b></a></li>
                 <li><a href="floral.html">Floral Doily Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
-		<li><a href="ruffle.html"><font color="#ff0066"><b>Ruffle Doily Patterns</b></font></a></li>
-		<li><a href="tablecloths.html">Tablecloth Patterns</a></li>    
+				<li><a href="ruffle.html"><font color="#ff0066"><b>Ruffle Doily Patterns</b></font></a></li>
+				<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
                 <li><a href="index.html">HOME</a></li>
        
             </ul>
