--- a/floral.html
+++ b/floral.html
@@ -13,7 +13,7 @@
   height: 30px;
 }
 </style>
-<script>window._epn = {campaign: 5338775335};</script>
+<script async src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
 </head>
 <body>
 <div class="wrap">
@@ -226,7 +226,7 @@
 
 
 
-
+<BR><BR><ins class="epn-placement" data-config-id="6008ff3feb81e63d612d4540"></ins>
 
 
 
