--- a/floral.html
+++ b/floral.html
@@ -13,7 +13,6 @@
   height: 30px;
 }
 </style>
-<script async src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
 </head>
 <body>
 <div class="wrap">
@@ -40,12 +39,13 @@
             <ul>
 						 
 				<li><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- lazy -->
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-layout="in-article"
-     data-ad-format="fluid"
+     style="display:block"
      data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7024224107"></ins>
+     data-ad-slot="9863808738"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script></li>
