--- a/floral.html
+++ b/floral.html
@@ -34,23 +34,7 @@
 				<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
                 <li><a href="index.html">HOME</a></li>
         </div>
-		<div class="side">
-           
-            <ul>
-						 
-				<li><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- lazy -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="9863808738"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script></li>
-               </ul>
-        </div>
+
 		
    </div>
    
@@ -244,7 +228,17 @@
 </div>
 <!--------------------------------------->
 
-    <div class="clear"></div>
+    <div class="clear"></div><center><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- lazy -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="9863808738"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+	</script></center>
      <br><Br><center><div class="copy">&copy; 2014-2020 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
