--- a/tablecloths.html
+++ b/tablecloths.html
@@ -43,6 +43,7 @@
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Crochet Tablecloth Patterns</p></font></center>
 
+<div class="grid-view"><div class="prev"><a href="tablecloths/lotus.html"><img src="tablecloths/images/lotust.jpg" alt="" /></a></div><p><a href="tablecloths/lotus.html">Lovely Lotus</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="tablecloths/bouquet.html"><img src="tablecloths/images/bouquett.jpg" alt="" /></a></div><p><a href="tablecloths/bouquet.html">Bride's Bouquet</a></p></div>
 
