--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
         </div>
 		
 	
-		
+		<ul><li><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="4771511572"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+			</script></li></ul>
         
     </div>
   
