--- a/floral.html
+++ b/floral.html
@@ -5,6 +5,7 @@
 <meta name="keywords" content="free flower floral crochet patterns" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
+<script async src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
 <style> #rcorners2 {
   border-radius: 25px;
   border: 1px solid #e7e6e6;
@@ -13,6 +14,7 @@
   height: 30px;
 }
 </style>
+
 </head>
 <body>
 <div class="wrap">
@@ -33,11 +35,30 @@
 				<li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
 				<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
                 <li><a href="index.html">HOME</a></li>
-        </div>
 
+			 		<ul><li><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="4771511572"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+			</script></li></ul>
+						 		<ul><li><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="4771511572"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+			</script></li></ul>
+        </div>
 		
-   </div>
-   
+      
+    </div>
+
 		
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Floral Crochet Doily Patterns</p></font></center>
 <div class="grid-view"><div class="prev"><a href="floral/bouquet.html"><img src="floral/images/bouquett.jpg" alt="" /></a></div>
@@ -209,14 +230,6 @@
 <p><a href="floral/wildrose2.html">Wild Rose Doily2</a></p></div>
 
 
-
-<BR><BR><ins class="epn-placement" data-config-id="6008ff3feb81e63d612d4540"></ins>
-
-
-
-
-
-
        </div>
 
 </p>
@@ -227,18 +240,8 @@
 </div>
 </div>
 <!--------------------------------------->
-
-    <div class="clear"></div><center><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- lazy -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="9863808738"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-	</script></center>
+<ins class="epn-placement" data-config-id="6008ff3feb81e63d612d4540"></ins>
+    <div class="clear"></div>
      <br><Br><center><div class="copy">&copy; 2014-2020 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
