--- a/floral.html
+++ b/floral.html
@@ -35,7 +35,7 @@
 				<li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
 				<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
                 <li><a href="index.html">HOME</a></li>
-
+ <h3><font face="aria">Sponsored Links</font></h3>
 			 		<ul><li><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
