--- a/afghans/test.html
+++ b/afghans/test.html
@@ -62,19 +62,19 @@ HEAVY RUG YARN
 <br>Kapok or shredded foam rubber
 <br><br>
 Work 2 motifs of any 2 main col­ors same as bedspread. Sew motifs tog leaving an opening. Fill with kapok or shredded foam rubber. Sew opening closed. Finish with pompons or if desired omit pompons.
-<br><br>
+
+</p><br><br>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- mis1 -->
+<!-- mis2rectangle -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="9454660910"
+     data-ad-slot="5651147273"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</p>
         </div>
     </div>
     <div class="clear"></div>
