--- a/afghans/cal.html
+++ b/afghans/cal.html
@@ -5,7 +5,7 @@
 <center><table width="90%" border="0"><tr><td><br>
 <p align="right"><a href="https://drive.google.com/uc?id=1M0V93mdwhKnC8t2Vttt1-T78RmGA-kb1&export=download&export=download">
 <img src="images/cal.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Calico Crochet Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Calico Crochet Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br>COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 28 ounces of No. 686 Paddy Green and 16 ounces each of No. 253 Tangerine and No. 649 Olive Green. 
 <br>Crochet Hook, Size H. 
@@ -24,8 +24,18 @@ sc in last 4 ch. Join-60 sc. Break off and fasten.
 <br><br>
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
 <br><br>
-
 </font> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- mis2rectangle -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="5651147273"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </td></tr></table></center>
 </body></html>
 
