--- a/afghans/cob.html
+++ b/afghans/cob.html
@@ -5,7 +5,7 @@
 <center><table width="90%" border="0"><tr><td><br>
 <p align="right"><a href="https://drive.google.com/uc?id=1SQi9sqwuM4essoVKpHTGdpjfXq0utm9X&export=download&export=download">
 <img src="images/cob.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Cobbled Street - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Cobbled Street Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br>
 COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 26 ounces of No. 649 Olive Green; 20 ounces each of No. 253 Tangerine and No. 230 Yellow. 
@@ -25,15 +25,23 @@ COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Ske
 <br><b>Third Band:</b> With Tangerine work as for Second Band. <br><b>Fourth Band:</b> Attach Yellow in same place where last sc was made on first row of First Band, then repeat Second Band. Sew starting chain of First Band to the adjacent edge of the Fourth Band. Sew motifs together, having the Yellow bands in one direction and the Tangerine bands in the opposite direction. Make 10 rows of 15 motifs. <br><b>BORDER 1st rnd:</b> With Green and right side facing, attach yarn to the back loop of first sc on any motif, ch 1, sc in same place, sc in back loop of each of next 13 sc, * sc in the end sc of each row of next motif, sc in the back loop of each of next 14 sc on same motif. Repeat from * around, making 3 sc in the back loop of the last sc of each corner motif and ending with an sc in the end sc of each row of first motif. Join with sl st to first sc. Ch 1, turn. 
 <br><b>Next 4 rnds:</b> Sc in joining, making 3 sc in the back loop of the 2nd sc of each corner group, sc in the back loop of each sc around. Join. Ch 1, turn. 
 <br><b>6th rnd:</b> Working through both loops of each sc, sl st in each sc around. Join. Break off and fasten. Block to measurements. 
-
-
-<br><br>
+</font><br><br>
 <img src="images/cob2.jpg" width="350" height="350" border="0">
 <br><br>
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
 <br><br>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- mis2rectangle -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="5651147273"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
-</font> 
 </td></tr></table></center>
 </body></html>
 
