--- a/afghans/color.html
+++ b/afghans/color.html
@@ -5,17 +5,17 @@
 <center><table width="90%" border="0"><tr><td><br>
 <p align="right"><a href="https://drive.google.com/uc?id=1IOnP_prfQ-C-5XVNmKAjaY_nENkJWU5k&export=download&export=download">
 <img src="images/color.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> The Big Colorful Throw Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">The Big Colorful Throw Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br>
 AMERICAN THREAD "AUNT LYDIA'S" HEAVY RUG YARN 
 <br>1-70 yd. skein Yellow
-<br>2-70 yd. skeinschartreuse 
+<br>2-70 yd. skeins Chartreuse 
 <br>4-70 yd. skeins Orange 
 <br>12-70 yd. skeins White 
-<br>24-70 yd. skeins assortedcolors 
+<br>24-70 yd. skeins Assorted Colors 
 and
-<br>"AUNT LYDIA'S" CARPET AND BUTTON THREAD 1 spool White
+<br>"AUNT LYDIA'S" CARPET AND BUTTON THREAD 1 Spool White.
 <br>Aluminum Crochet Hook Size H OR ANY SIZE HOOK WHICH WILL RESULT IN STITCH GAUGE BELOW
 <br><b>GAUGE:</b> 3 dc = 1 inch
 <br><b>MOTIF:</b> With Yellow ch 4, join to form a ring. 
@@ -50,11 +50,21 @@ HEAVY RUG YARN
 <br>Kapok or shredded foam rubber
 <br><br>
 Work 2 motifs of any 2 main col­ors same as bedspread. Sew motifs tog leaving an opening. Fill with kapok or shredded foam rubber. Sew opening closed. Finish with pompons or if desired omit pompons.
-<br><br>
+</font><br><br>
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
 <br><br>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- mis2rectangle -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="5651147273"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
-</font> 
 </td></tr></table></center>
 </body></html>
 
