--- a/index.html
+++ b/index.html
@@ -37,15 +37,7 @@
                  <li><b><a href="index.html"><font color="#ff0066"><b>->HOME<-</font></a></li>
             </ul>
 			 
-			 		<ul><li><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="autorelaxed"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="4771511572"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-			</script></li></ul>
+
         </div>
 		
       
@@ -78,13 +70,24 @@
         </div>
 		
 						    </div>
-    <div class="clear"></div>
+  
 </div>
 </div>
 <!--------------------------------------->
 
     <div class="clear"></div>
-     <br><Br><center><div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
+     <br><Br><center>
+	 
+	 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:468px;height:60px"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="8162061861"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script><br><br>
+
+<div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
 </body>
