--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <title>Free Crochet  Patterns</title>
 <meta name="keywords" content="doily, free, crochet, crocheting, freebies, free crochet patterns, tablecloths, bedspreads, afghans floral, oval, round, pineapple, decorative doilies, crocheting cotton, thread" />
@@ -80,7 +80,7 @@
 	 
 	 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
-     style="display:inline-block;width:468px;height:60px"
+     style="display:inline-block;width:728px;height:60px"
      data-ad-client="ca-pub-7162871844388187"
      data-ad-slot="8162061861"></ins>
 <script>
