--- a/index.html
+++ b/index.html
@@ -77,14 +77,17 @@
 
     <div class="clear"></div>
      <br><Br><center>
+	
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
-     style="display:inline-block;width:1200px;height:60px"
+     style="display:inline-block;width:940px;height:60px"
      data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="8269873075"></ins>
+     data-ad-slot="7284094464"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script><br><br>
+</script>
+	
+	<br><br>
 
 <div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
