--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <div class="grid-view"><div class="prev"><a href="round/brocade.html"><img src="round/images/brocadet.jpg" alt="" /></a></div><p><a href="round/brocade.html">Brocade Doily</a></p></div>
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<div class="single-grid"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:inline-block;width:940px;height:60px"
      data-ad-client="ca-pub-7162871844388187"
@@ -71,7 +71,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
+	</div>
        </div>
 
         </div>
