--- a/index.html
+++ b/index.html
@@ -63,15 +63,6 @@
 
 <div class="grid-view"><div class="prev"><a href="round/brocade.html"><img src="round/images/brocadet.jpg" alt="" /></a></div><p><a href="round/brocade.html">Brocade Doily</a></p></div>
 
-<div class="single-grid"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:inline-block;width:940px;height:60px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7284094464"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-	</div>
        </div>
 
         </div>
@@ -82,12 +73,19 @@
 </div>
 <!--------------------------------------->
 
-    <div class="clear"></div>
-     <br><Br><center>
-
+     <div class="clear"></div>
+    <center><img src="images/cat.jpg" /><div class="single-grid"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:940px;height:60px"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="7284094464"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
 </body>
 </html>
+
