--- a/index.html
+++ b/index.html
@@ -62,18 +62,17 @@
 <div class="grid-view"><div class="prev"><a href="ruffle/starbr.html"><img src="ruffle/images/starbrt.jpg" alt="" /></a></div><p><a href="ruffle/starbr.html">Starburst Ruffle</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="round/brocade.html"><img src="round/images/brocadet.jpg" alt="" /></a></div><p><a href="round/brocade.html">Brocade Doily</a></p></div>
-
-       </div>
-
+            <div class="clear"></div>
         </div>
-		
-						    </div>
-  
+        <div class="clear"></div>
+    </div>
+    <div class="clear"></div>
 </div>
 </div>
 <!--------------------------------------->
 
-     <div class="clear"></div>
+    <div class="clear"></div>
+   <div class="copy">
     <center><img src="images/cat.jpg" /><div class="single-grid"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:inline-block;width:940px;height:60px"
@@ -83,7 +82,7 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-<div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
+&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
 </body>
