--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div class="clear"></div>
    <div class="copy">
-    <center><img src="images/cat.jpg" /><div class="single-grid"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <center><img src="images/cat.jpg" /><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:inline-block;width:940px;height:60px"
      data-ad-client="ca-pub-7162871844388187"
