--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
     <div class="clear"></div>
    <div class="copy">
-    <center><img src="images/cat.jpg" /><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <center><img src="images/cat.jpg" />
+	    <br><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:inline-block;width:940px;height:60px"
      data-ad-client="ca-pub-7162871844388187"
@@ -81,7 +82,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
+<br><br>
 &copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
