--- a/afghans/ggarden.html
+++ b/afghans/ggarden.html
@@ -55,6 +55,16 @@ skip next 3 dc, (ch 1, 3 dc in next ch-1 sp) twice. Repeat from ** across to nex
 <br><br>
 <img src="images/ggarden2.jpg" width="350" height="350" border="0">
 <br><br>
+  <center>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:940px;height:60px"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="7284094464"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+  </center><br><br>
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
 <br><br>
 
