--- a/afghans/houndstooth.html
+++ b/afghans/houndstooth.html
@@ -4,7 +4,7 @@
 <body>
 <center><table width="90%" border="0"><tr><td><br>
 <p align="right"><a href="https://drive.google.com/uc?id=1RsBdWILUfHuRA9QaTev7_TgFTLmKBKVG&export=download&export=download"><img src="images/houndstooth.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Houndstooth Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Houndstooth Afghan Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br>
 
@@ -21,14 +21,20 @@ Crochet Hook, Size K.
 <br><b>BORDER</b> Making 3 sc in next sc and at each corner, sc evenly around entire outer edge. Join with sl st to first sc. Break off and fasten. Block to measurements. 
 <br><br>
 <img src="images/houndstooth2.jpg" width="350" height="350">
-
-
-
 <br><br>
+<center>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:940px;height:60px"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="7284094464"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<br><br>
+&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br>
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
-</font> 
+<br><br></center>
 </td></tr></table></center>
 </body></html>
 
