--- a/afghans/ggarden.html
+++ b/afghans/ggarden.html
@@ -5,7 +5,7 @@
 <center><table width="90%" border="0"><tr><td><br>
 <p align="right"><a href="https://drive.google.com/uc?id=1SzAGTmbBSxchR4uvIj4DRo2MNlKuXCak&export=download&export=download">
 <img src="images/ggarden.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Granny's Garden Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Granny's Garden Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br>
 COATS & CLARK'S RED HEART KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 52 ounces of No. 588 Amethyst and 14 ounces each of No. 758 Mid Rose and No. 722 Lt. Pink.
@@ -55,7 +55,7 @@ skip next 3 dc, (ch 1, 3 dc in next ch-1 sp) twice. Repeat from ** across to nex
 <br><br>
 <img src="images/ggarden2.jpg" width="350" height="350" border="0">
 <br><br>
-  <center>
+<center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:inline-block;width:940px;height:60px"
@@ -64,11 +64,10 @@ skip next 3 dc, (ch 1, 3 dc in next ch-1 sp) twice. Repeat from ** across to nex
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-  </center><br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
 <br><br>
-
-</font> 
+&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br>
+<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br></center>
 </td></tr></table></center>
 </body></html>
 
