--- a/afghans/houndstooth.html
+++ b/afghans/houndstooth.html
@@ -3,7 +3,7 @@
 <html><head><title>Houndstooth Afghan Pattern - Free Crochet Cotton Pattern</title></head>
 <body>
 <center><table width="90%" border="0"><tr><td><br>
-<p align="right"><a href="https://drive.google.com/uc?id=1RsBdWILUfHuRA9QaTev7_TgFTLmKBKVG&export=download&export=download"><img src="images/houndstooth.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<p align="right"><a href="https://drive.google.com/uc?id=1RsBdWILUfHuRA9QaTev7_TgFTLmKBKVG&export=download&export=download"><img src="images/houndstooth.jpg" align="right"  width="400" height="425" border="0"></a><img src="images/houndstooth2.jpg" width="350" height="350" align="right"></p>
 <font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Houndstooth Afghan Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br>
@@ -19,9 +19,8 @@ Crochet Hook, Size K.
 
 <br><b>Edging:</b> With Paddy Green make 2 sc in same sc where last sc was made, work-ing along side edge, make a group st in end st of every Paddy Green row, ending with sl st in first ch of starting chain. Break off and fasten. With right side facing and working along opposite side edge, attach Paddy Green to last ch of starting chain and work to corre-spond with opposite side, ending with sc in same place where first sc of last row was made. Do not break off. 
 <br><b>BORDER</b> Making 3 sc in next sc and at each corner, sc evenly around entire outer edge. Join with sl st to first sc. Break off and fasten. Block to measurements. 
-<br><br>
-<img src="images/houndstooth2.jpg" width="350" height="350">
-<br><br>
+
+<br><br><br>
 <center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
@@ -30,11 +29,10 @@ Crochet Hook, Size K.
      data-ad-slot="7284094464"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></center>
+<br><br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
 <br><br>
-<br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br></center>
 </td></tr></table></center>
 </body></html>
 
