--- a/afghans/park.html
+++ b/afghans/park.html
@@ -5,7 +5,7 @@
 <center><table width="90%" border="0"><tr><td><br>
 <p align="right"><a href="https://drive.google.com/uc?id=1RV_n-wrbQ8BLFLN0g8M-XiVL0w4ep6dz&export=download&export=download">
 <img src="images/park.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Park Avenue Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Park Avenue Afghan Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br>COATS & CLARK'S RED HEART ® KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 36 ounces of No. 679 Nile Green and 8 ounces of No. 676 Emerald Green. 
 <br>Crochet Hook, Size G. Afghan measures 52 x 59 inches, excluding fringe. Each strip, including border, measures 8 3/4 x 59 inches. 
@@ -18,15 +18,21 @@
 dc). Repeat from * across to within last end sp, ch 2, in last end sp make cluster, ch 2 and cluster-2 corner clusters made; working along opposite side of starting chain, ch 2, make cluster in same ch where next shell was made, ch 2, cluster in next ch-2 sp, ch 1, dc in each of next 14 ch, ch 1, cluster in next ch-2 sp, ch 2, cluster in same ch where next shell was made, ch 2; 2 corner clusters in next end sp, ch 2, ** cluster in next end sp, ch 2. Repeat from ** to within end sp of 90th row, 2 corner clusters in next sp, ch 2, sc in sp of next shell, ch 2, skip next 3 dc of same shell, dc in back loop of next 14 dc, ch 2, sc in sp of next shell, ch 2. Join with sl st to tip of first cluster. Turn. 
 <br><b>2nd rnd:</b> Sl st loosely in front loop of each st and each ch around. Join. Break off and fasten. Block to measurements. Being careful to keep all strips in one direction, sew strips lengthwise together, leaving the corner clusters free at both ends. 
 <br><b>FRINGE:</b> Cut 2 strands of Nile Green, each 12 inches long. Double these strands to form a loop. Insert hook in back loop of the sl st directly over the first corner cluster and draw loop through. Draw loose ends through loop and pull up tightly to form a knot. Knot 2 strands as before in every other sl st along narrow end and in joining between strips. Work fringe along opposite edge in same way. Trim evenly. 
+</font>
 
-
+<br><br><br>
+<center>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:940px;height:60px"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="7284094464"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></center>
+<br><br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
 <br><br>
-<img src="images/park2.jpg" width="350" height="350" border="0">
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
-</font> 
 </td></tr></table></center>
 </body></html>
 
