--- a/afghans/cal.html
+++ b/afghans/cal.html
@@ -19,23 +19,21 @@ sc in last 4 ch. Join-60 sc. Break off and fasten.
 <br><b>5th rnd:</b> Attach Olive Green to joining, ch 1, sc in joining, sc in each sc around, making 3 sc in center sc of each corner. Join. Break off and fasten. 
 <br>Block to measurements. 
 <br>Using Olive Green and picking-up the back loop only of each sc (front loops remain free on right side), sew 11 x 17 Motifs neatly together. 
-<br><b>BORDER 1st rnd:</b> With right side facing, attach Olive Green to back loop of any corner sc, working in back loop only of each sc, make 2 sc in same place, * sc in each sc across to within next corner sc, 3 sc in corner sc. Repeat from * 2 times more; sc in each remaining sc, sc in same place as first 2 sc. Join. Break off and fasten. <br><b>2nd rnd:</b> With Tangerine repeat first rnd. 3rd and 4th rnds: With Paddy Green repeat first rnd. Press lightly. 
+<br><b>BORDER 1st rnd:</b> With right side facing, attach Olive Green to back loop of any corner sc, working in back loop only of each sc, make 2 sc in same place, * sc in each sc across to within next corner sc, 3 sc in corner sc. Repeat from * 2 times more; sc in each remaining sc, sc in same place as first 2 sc. Join. Break off and fasten. <br><b>2nd rnd:</b> With Tangerine repeat first rnd. 3rd and 4th rnds: With Paddy Green repeat first rnd. Press lightly. </font>
 
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-</font> 
+<br><br><br>
+<center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- mis2rectangle -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:940px;height:60px"
      data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5651147273"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="7284094464"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></center>
+<br><br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="4" color="#648464">HOME</font></a>
+<br><br>
 </td></tr></table></center>
 </body></html>
 
