--- a/afghans/cob.html
+++ b/afghans/cob.html
@@ -22,26 +22,26 @@ COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Ske
 <br><b>3rd and 4th rows:</b> Sc in each sc across. Ch 1, turn. Break off and fasten at end of last row. 
 <br><b>Second Band: 1st row:</b> Attach Yellow to the back loop of 2nd sc of the 3-sc group preceding the group where yarn was attached, sc in same place and in next 8 sc, sc in same place where yarn was attached on previous band, sc in the end sc of each of the 4 rows worked on last band. Ch 1, turn. 
 <br><b>2nd, 3rd and 4th rows:</b> Repeat 3rd row of last band. Break off and fasten at end of last row. 
-<br><b>Third Band:</b> With Tangerine work as for Second Band. <br><b>Fourth Band:</b> Attach Yellow in same place where last sc was made on first row of First Band, then repeat Second Band. Sew starting chain of First Band to the adjacent edge of the Fourth Band. Sew motifs together, having the Yellow bands in one direction and the Tangerine bands in the opposite direction. Make 10 rows of 15 motifs. <br><b>BORDER 1st rnd:</b> With Green and right side facing, attach yarn to the back loop of first sc on any motif, ch 1, sc in same place, sc in back loop of each of next 13 sc, * sc in the end sc of each row of next motif, sc in the back loop of each of next 14 sc on same motif. Repeat from * around, making 3 sc in the back loop of the last sc of each corner motif and ending with an sc in the end sc of each row of first motif. Join with sl st to first sc. Ch 1, turn. 
+<br><b>Third Band:</b> With Tangerine work as for Second Band. 
+<br><b>Fourth Band:</b> Attach Yellow in same place where last sc was made on first row of First Band, then repeat Second Band. Sew starting chain of First Band to the adjacent edge of the Fourth Band. Sew motifs together, having the Yellow bands in one direction and the Tangerine bands in the opposite direction. Make 10 rows of 15 motifs. 
+<br><b>BORDER 1st rnd:</b> With Green and right side facing, attach yarn to the back loop of first sc on any motif, ch 1, sc in same place, sc in back loop of each of next 13 sc, * sc in the end sc of each row of next motif, sc in the back loop of each of next 14 sc on same motif. Repeat from * around, making 3 sc in the back loop of the last sc of each corner motif and ending with an sc in the end sc of each row of first motif. Join with sl st to first sc. Ch 1, turn. 
 <br><b>Next 4 rnds:</b> Sc in joining, making 3 sc in the back loop of the 2nd sc of each corner group, sc in the back loop of each sc around. Join. Ch 1, turn. 
 <br><b>6th rnd:</b> Working through both loops of each sc, sl st in each sc around. Join. Break off and fasten. Block to measurements. 
-</font><br><br>
-<img src="images/cob2.jpg" width="350" height="350" border="0">
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+</font>
+
+<br><br><br>
+<center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- mis2rectangle -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:940px;height:60px"
      data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5651147273"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="7284094464"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
+</script></center>
+<br><br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
+<br><br>
 </td></tr></table></center>
 </body></html>
 
