--- a/afghans/color.html
+++ b/afghans/color.html
@@ -50,24 +50,22 @@ HEAVY RUG YARN
 <br>Kapok or shredded foam rubber
 <br><br>
 Work 2 motifs of any 2 main col­ors same as bedspread. Sew motifs tog leaving an opening. Fill with kapok or shredded foam rubber. Sew opening closed. Finish with pompons or if desired omit pompons.
-</font><br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+</font>
+
 <br><br>
+<br>
+<center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- mis2rectangle -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:940px;height:60px"
      data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5651147273"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="7284094464"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
+</script></center>
+<br><br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
+<br><br>
 </td></tr></table></center>
 </body></html>
-
-
-
 
