--- a/afghans/ggarden.html
+++ b/afghans/ggarden.html
@@ -51,9 +51,8 @@ skip next 3 dc, (ch 1, 3 dc in next ch-1 sp) twice. Repeat from ** across to nex
 <br><b>FOURTH BORDER</b> Repeat Second Border. 
 <br><b>Fourth Motif Band:</b> Joining 76 motifs, work as for First Motif Band. 
 <br><b>FIFTH BORDER</b> Repeat Third Border. Block to measurements. 
-
-<br><br>
-
+</font>
+<br><br><br>
 <center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
@@ -62,14 +61,9 @@ skip next 3 dc, (ch 1, 3 dc in next ch-1 sp) twice. Repeat from ** across to nex
      data-ad-slot="7284094464"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<br></center>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+</script></center>
+<br><br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
 <br><br>
 </td></tr></table></center>
 </body></html>
-
-
-
-
