--- a/afghans/color.html
+++ b/afghans/color.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Granny's Garden Afghan Pattern - Free Crochet Cotton Pattern</title></head>
+<html><head><title>The Big Colorful Throw Pattern - Free Crochet Cotton Pattern</title></head>
 <body>
 <center><table width="90%" border="0"><tr><td><br>
 <p align="right"><a href="https://drive.google.com/uc?id=1IOnP_prfQ-C-5XVNmKAjaY_nENkJWU5k&export=download&export=download">
