--- a/ruffle.html
+++ b/ruffle.html
@@ -80,7 +80,7 @@
 <!--------------------------------------->
 
 
-    <center><br><div class="clear"></div><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+   <div class="copy"> <center><br><div class="clear"></div><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- just -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:60px"
@@ -89,7 +89,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-     <br><Br><div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
+     <br><Br>&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
 </body>
