--- a/tablecloths/harvest.html
+++ b/tablecloths/harvest.html
@@ -1,29 +1,14 @@
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
-<title>Free Harvest Tablecloth Crochet Pattern</title>
-</head>
+<html><head><title>Harvest Tablecloth - Free Crochet Cotton Pattern</title></head>
 <body>
-<center>
-<table width="90%" border="0">
-<tr>
-<td>
-<br><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/harvestlarge.jpg" target="new"><img src="images/harvest.jpg" align="right"  width="300" height="300"></a></p>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 
-
-<font face="trebuchet MS" color="#76769B" size="5"><b>Harvest Tablecloth Crochet Pattern</b></font><br><br>
+<p align="right"><a href="https://drive.google.com/uc?id=1YOlxXdeIni8ed5t_wU2MaakLo4_ZdedA&export=download&export=download"><img src="images/harvest.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Harvest Tablecloth Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 
-J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A. 104, Size 30: 42 balls of No. 1 White, No. 61 Ecru or No. 42 Cream; or CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B. 34, Size 30: 30 balls of No. 1 White, No. 61 Ecru or No. 42 Cream; <br>
+<br>J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A. 104, Size 30: 42 balls of No. 1 White, No. 61 Ecru or No. 42 Cream; or CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B. 34, Size 30: 30 balls of No. 1 White, No. 61 Ecru or No. 42 Cream; <br>
 or <br>
 CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B. 345, Size 30: 18 balls of White or Ecru. <br>
 Milwards Steel Crochet Hook No. 10. <br>
@@ -44,22 +29,20 @@ Tablecloth measures 63 x 83 inches. Each motif measures 4 1/4 inches square.
 <br><b>2nd rnd:</b> In loop just formed make (sc, ch 7) twice; ** in first loop on next side make sc, ch 7 and sc; * ch 5, sc in next loop. Repeat from * across side, ending with (sc, ch 7) twice in last loop. Repeat from ** around, ending with ch 2, dc in first sc to form last loop. 3rd rnd: Sc in loop just formed, ch 5, sc in next loop, ** ch 7, in corner loop make (sc, ch 7) twice; sc in next loop, * ch 5, sc in next loop. Repeat from * across side to within next corner loop. Repeat from ** around, forming last loop as on 2nd rnd. 4th rnd: Sc in loop just formed, * ch 7, dc in 5th ch from hook, ch 2, sc in next loop. Repeat from * around, ending with ch 2. Join to first sc. Break off and fasten. Starch lightly and press. 
 
 <br><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
+
+<br><br>
+<img src="images/harvest2.jpg">
 <br><br>
 
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
+<br><br>
+
 </font> 
+</td></tr></table></center>
+</body></html>
 
 
 
-</body>
-</html>
 
