--- a/tablecloths/meadow.html
+++ b/tablecloths/meadow.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Meadowsweet Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1XRPeCXsV4tS4HtbBIjJuuVLQUIKqNQFm&export=download&export=download"><img src="images/medowsweet.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Meadowsweet Tablecloth - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Meadowsweet Tablecloth</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 
 <br>J. & P. COATS BEST SIX CORD MERCERIZED CROCHET, Art. A.105, Size 20: 27 balls of No. 1 White or No. 61 Ecru for Small Cloth; 36 balls for Large Cloth; <br>or<br> CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.34, Size 20: 29 balls of No. 1 White, No. 61 Ecru or No. 42 Cream for Small Cloth; 39 balls for Large Cloth; <br>or<br> CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.345, Size 20: 20 balls of No. 1 White or No. 61 Ecru for Small Cloth; 26 balls for Large Cloth. <br>
@@ -28,9 +27,7 @@ to form last loop.
 <br><br>
 <img src="images/medowsweet2.jpg">
 <br><br>
-
-
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
