--- a/tablecloths/par.html
+++ b/tablecloths/par.html
@@ -2,10 +2,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Pineapple Parquet Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 
 <p align="right"><a href="https://drive.google.com/uc?id=11CzzJm7sQbzdbEp2MT-RFx-koUW5E1DV&export=download&export=download"><img src="images/par.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Pineapple Parquet Tablecloth - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pineapple Parquet Tablecloth</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 
  <br>J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 64: 51 balls of No. 1 White, No. 61 Ecru or No. 42 Cream.
@@ -34,9 +34,7 @@
 <br><br>
 <img src="images/par2.jpg">
 <br><br>
-
-
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
