--- a/tablecloths/7734.html
+++ b/tablecloths/7734.html
@@ -2,10 +2,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>7734 Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 
 <p align="right"><a href="https://drive.google.com/uc?id=1DRrRM0WqOF4MzyQeRXbodRyMlSglirEW&export=download&export=download"><img src="images/7734.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>7734 Tablecloth - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">7734 Tablecloth Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 
 <br>J. & P. COATS OR CLARK'S O.N.T. BEST SIX CORD MERCERIZED CROCHET, Size 30, Small Ball: J. & P. COATS-73 balls of White or Ecru, or 87 balls of any color, or CLARK'S 0.N.T.-109 balls of White or Ecru, or 135 balls of any color. Big Ball: J. & P. COATS-36 balls of White, Ecru or Cream 
@@ -25,9 +25,7 @@
 
 <img src="images/77342.jpg">
 <br><br>
-
-
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
