--- a/tablecloths/bouquet.html
+++ b/tablecloths/bouquet.html
@@ -2,10 +2,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Brides Bouquet Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 
 <p align="right"><a href="https://drive.google.com/uc?id=1CSC4bBdOllMAIznarWANkSjfwCSlsDi_&export=download&export=download"><img src="images/bouquet.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Brides Bouquet Tablecloth - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Brides Bouquet Tablecloth</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 
  <br>J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 64: 19 balls of No. 1 White, No. 61 Ecru No. 42 Cream; <br>or<br> J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 65: 12 balls of No. 1 White or No. 61 Ecru. <br>Milwards Steel Crochet Hook NO. 7. 
@@ -139,9 +139,7 @@ sc, ch 7 and sc; ch 7, sc in next loop, ch 7, in next loop make sc, ch 7 and sc;
 
 <img src="images/bouquet2.jpg">
 <br><br>
-
-
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
