--- a/tablecloths/lucky.html
+++ b/tablecloths/lucky.html
@@ -2,10 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Lucky Star Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 
 <p align="right"><a href="https://drive.google.com/uc?id=1MzC1zzhOQGHXEkHXTGCMi1iHWL4f-uy8&export=download&export=download"><img src="images/lucky.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Lucky Star Tablecloth - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Lucky Star Tablecloth</span></font><br><br>
+
 <font face="verdana" size="2"><b>MATERIALS:</b>
 
 <br>Clark's Big Ball Mercerized Crochet, size 20, 44 balls of White or Ecru.
@@ -33,7 +34,7 @@
 <br><br>
 
 
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
