--- a/tablecloths/pineapplep.html
+++ b/tablecloths/pineapplep.html
@@ -1,51 +1,14 @@
- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<html><head>
-
-<title>Free Vintage Crochet -   Pineapple Petals Tablecloth Doily Pattern</title>
-
-</head>
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head><title>Pineapple petals Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center>
-<table width="90%" height="100%" border="0" cellpadding="50" bgcolor="white"><tr><td> 
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<p align="right"><a href="https://drive.google.com/uc?id=1ZB8OZw3aN8HVlskBdZCmDUy3eQeqqdBQ&export=download&export=download"><img src="images/pineapplep.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pineapple Petals Tablecloth</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
 
-<!-- doilylinks -->
-
-<ins class="adsbygoogle"
-
-     style="display:inline-block;width:728px;height:15px"
-
-     data-ad-client="ca-pub-7162871844388187"
-
-     data-ad-slot="5009629351"></ins>
-
-<script>
-
-(adsbygoogle = window.adsbygoogle || []).push({});
-
-</script><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- meme -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:468px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="9746437906"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/pineappleplarge.jpg" target="new"><img src="images/pineapplep.jpg" align="right"  width="300" height="300"></a></p>
-
-
-
-<font face="comic sans ms" color="#76769B" size="5"><b>Free Vintage Crochet - Pineapple Petals Tablecloth Doily Pattern</b></font>
-<br>
-<font face="Times New Roman" size="2"><br><b>MATERIALS:</b><br>
-
-
-J. & P, COATS "KNIT-CRO-SHEEN," Art. A. 64: 20 balls of No. 1 White, No. 61 Ecru or No. 42 Cream; <br>or <br>J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 65: 12 balls of White or Ecru. <br>
+ <br>J. & P, COATS "KNIT-CRO-SHEEN," Art. A. 64: 20 balls of No. 1 White, No. 61 Ecru or No. 42 Cream; <br>or <br>J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 65: 12 balls of White or Ecru. <br>
 Milwards Steel Crochet Hook NO. 7. <br>
 
 <br><b>Rnd 1:</b> Ch 1, sc in ring (ch 2, sc in ring) 7 times; ch 5, dtr in first sc to form last loop. (8 lps)
@@ -63,20 +26,20 @@ made); ch 4, cluster in tip of next cluster (cluster over cluster made). End ch 
 <br><b>Rnd 10:</b> Work as for 4th Rnd, making ch-5 instead of ch-4.
 <b><br>Next 5 Rnds:</b> Repeat 5th to 9th Rnds incl.
 <br><b>Rnd 16:</b> * Cluster over cluster, ch 5, sc over sc, ch 5.
-<br><b>Rnd 17:</b> * In tip of cluster make cluster, ch 3 and cluster (cluster shell over cluster made):</b> ch 8, cluster over cluster, ch 8.
+<br><b>Rnd 17:</b> * In tip of cluster make cluster, ch 3 and cluster (cluster shell over cluster made): ch 8, cluster over cluster, ch 8.
 <br><b>Rnd 18:</b> * Cluster over cluster, ch 2, cluster in next sp, ch 2, (cluster over cluster, ch 3, sc in next loop, ch 3) twice.
-Note:</b> Hereafter, the work “pineapple” will be referred to as “p”.
+Note:</b> Hereafter, the work pineapple, <b>"pineapple" will be referred to as "p"</b>.
 <br><b>Rnd 19:</b> * Cluster over cluster, ch 2, in tip of next cluster make cluster, ch 5, cluster (p stem over cluster made); ch 2, (cluster over 
 cluster, ch 3, sc over sc, ch 3) twice.
 <br><b>Rnd 20:</b> * Cluster over cluster, ch 2, 11 dc in stem loop (p base); ch 2, (cluster over cluster, ch 2) twice.
 <br><b>Rnd 21:</b> * Cluster over cluster, (ch 1, dc in next dc) 11 times; ch 1, (cluster over cluster, ch 1) twice.
-<br><b>Rnd 22:</b> Cluster over cluster, * ch 2, skip next sp, across p make sc in first sp and (ch 3, sc in next sp) 9 times – the first and last sc of 
+<br><b>Rnd 22:</b> Cluster over cluster, * ch 2, skip next sp, across p make sc in first sp and (ch 3, sc in next sp) 9 times â€“ the first and last sc of 
 each p and the loops in between are the p loops; ch 2, (cluster over cluster) 3 times. End. (cluster over cluster) twice.
 <br><b>Rnd 23:</b> Cluster over cluster, * ch 3, (sc in next p loop, ch 3) 8 times; sc in last p loop, ch 3 (cluster over cluster) 3 times. End. (cluster 
 over cluster) twice.
 <br><b>Rnd 24:</b> * Cluster over cluster, ch 4, (sc in next p loop, ch 3) 7 times; sc in last p loop, ch 4, cluster over cluster, skip next cluster.
 
-Note:</b> Hereafter, when working across p’s there will be one loop less on each Rnd.
+Note:</b> Hereafter, when working across pâ€™s there will be one loop less on each Rnd.
 <br><b>Rnd 25:</b> Cluster over cluster, * ch 4, work across p loops as before, ch 4, (cluster over cluster) twice. End cluster over cluster.
 <br><b>Rnd 26:</b> * Cluster over cluster, ch 5, make p loops, ch 5, cluster over cluster, ch 2.
 <br><b>Rnd 27:</b> * Cluster over cluster, ch 5, make p loops, ch 5, cluster over cluster, ch 1, cluster in next sp, ch 1.
@@ -100,67 +63,57 @@ Note:</b> Hereafter, when working across p’s there will be one loop less on each
 twice.
 <br><b>Rnd 45:</b> * (Cluster over cluster, ch 9) twice; cluster over cluster, ch 2, cluster in next sp, ch 2, (cluster over cluster, ch 9) twice; cluster 
 over cluster, ch 2.
-<br><b>Rnd 46:</b> * (Cluster over cluster, ch 3, sc in next loop, ch 3) twice; (cluster over cluster, ch 3) twice; (cluster over cluster, ch 3, sc in 
-next loop, ch 3) twice; cluster over cluster, ch 3, cluster in next sp, ch 3.
+<br><b>Rnd 46:</b> * (Cluster over cluster, ch 3, sc in next loop, ch 3) twice; (cluster over cluster, ch 3) twice; (cluster over cluster, ch 3, sc in next loop, ch 3) twice; cluster over cluster, ch 3, cluster in next sp, ch 3.
 <br><b>Rnd 47:</b> * (Cluster over cluster, ch 3, sc over sc, ch 3) twice; cluster over cluster, ch 2, ch-6 p stem over cluster, ch 2.
 <br><b>Rnd 48:</b> * (Cluster over cluster, ch 3) 3 times; 12 dc in p stem loop, ch 3.
 <br><b>Rnd 49:</b> * (Cluster over cluster, ch 1) 3 times; (dc in next dc, ch 1) 12 times. Break off and fasten. Attach thread to third cluster on Rnd.
-Next 8 <br><b>Rnds:</b> Work as for 22nd - 29th Rnds incl, making 10 p loops on 50th Rnd, 9 p loops on 51st Rnd, 8 p loops on 52nd round and 
-13 dc in p stem loop on 57th Rnd for p’s.
+<br><b>Next 8 Rnds:</b> Work as for 22nd - 29th Rnds incl, making 10 p loops on 50th Rnd, 9 p loops on 51st Rnd, 8 p loops on 52nd round and 
+13 dc in p stem loop on 57th Rnd for pâ€™s.
 
 <br><b>Rnd 58:</b> * Cluster over cluster, ch 5, make p loops, ch 5, cluster over cluster, (ch 1, dc in next dc) 13 times; ch 1. Break off and 
 fasten. Attach thread to 2nd cluster on Rnd.
 <br><b>Rnd 59:</b> * Cluster over cluster, ch 3, skip next sp, (sc in next sp, ch 3) 12 times; cluster over cluster, ch 5, make p loop, ch 5.
 <br><b>Rnd 60:</b> * Cluster over cluster, ch 3, make p loops, ch 3, cluster over cluster, ch 5, sc in p loop, ch 5.
 <br><b>Rnds 61 & 62:</b> Repeat 25th Rnd.
-Next 5 <br><b>Rnds:</b> Work as for 26th to 29th and 58th Rnds incl, making ch-7 p stem loops on 65th Rnd, 14 dc in p stem loop on 66th Rnd 
-and 14 dc for p’s on 67th Rnd. Don not break off at end of 67th Rnd.
-Note:</b> Hereafter, make ch-4 p loops on new p’s.
+<br><b>Next 5 Rnds:</b> Work as for 26th to 29th and 58th Rnds incl, making ch-7 p stem loops on 65th Rnd, 14 dc in p stem loop on 66th Rnd 
+and 14 dc for pâ€™s on 67th Rnd. Do not break off at end of 67th Rnd.
+<br><b>Note:</b> Hereafter, make ch-4 p loops on new p's.
 <br><b>Rnd 68:</b> * Cluster over cluster, ch 5, make p loops, ch 5, cluster over cluster, ch 3, skip next sp, (sc in next sp, ch 4) 12 times; sc in 
 next sp, ch 3.
 <br><b>Rnd 69:</b> * Cluster over cluster, ch 5, make p loops, ch 5. Break off and fasten. Attach thread to next cluster.
 <br><b>Rnd 70:</b> Work as for 60th Rnd, making ch-5 sps before and after the p loops.
 Note:</b> Hereafter, make ch-6 sps before and after all p loops.
 <br><b>Rnds 71 & 72:</b> Repeat Rnd 25th Rnd.
-Next 5 <br><b>Rnds:</b> Work as for 26th to 29th and 58th Rnds incl, making ch-=9 p stem loops on 75th Rnd, 15 dc in p stem loop on 76th Rnd 
-and 15 dc for p’s on 77th Rnd. Break off and fasten at end of 77th Rnd. Attach thread to next cluster.
+<br><b>Next 5 Rnds:</b> Work as for 26th to 29th and 58th Rnds incl, making ch-=9 p stem loops on 75th Rnd, 15 dc in p stem loop on 76th Rnd 
+and 15 dc for pâ€™s on 77th Rnd. Break off and fasten at end of 77th Rnd. Attach thread to next cluster.
 <br><b>Rnd 78:</b> * Cluster over cluster, ch 3, skip next sp, (sc in next sp, ch 4) 13 times; sc in next sp, ch 3, cluster over cluster, ch 6, make p 
 loops, ch 6.
 <br><b>Rnd 79:</b> * Cluster over cluster, ch 3, make p loops, ch 3, cluster over cluster, ch 6, make p loop, ch 6.
 <br><b>Rnd 80:</b> * Cluster over cluster, ch 4, make p loops, ch 4, cluster over cluster, ch 6, sc in p loop, ch 6. Break off and fasten. Attach 
 thread to next cluster.
 <b><br>Note:</b> Where Rnds are worked as for previousRnds, continue to ch 6 before and after the p loops.
-Next 9 <br><b>Rnds:</b> Work as for 32nd to 40th Rnds incl, making 2 p loops on 89th Rnd. Break off and fasten at end of 89th >Rnd. Attach thread 
+<br><b>Next 9 Rnds:</b> Work as for 32nd to 40th Rnds incl, making 2 p loops on 89th Rnd. Break off and fasten at end of 89th >Rnd. Attach thread 
 to last cluster made.
 <br><b>Rnd 90:</b> * Cluster over cluster, ch 6, make p loop, ch 6, (cluster over cluster, ch 4, sc over sc, ch 4) 4 times.
 <br><b>Rnd 91:</b> * Cluster over cluster, ch 6, sc in p loop, ch 6, (cluster over cluster, ch 10) 4 times.
-<br><b>Rnd 92:</b> Cluster over cluster, * (cluster over cluster, ch 4, sc in next loop, ch 4) twice; make 2 clusters in next cluster, (ch 4, sc in next 
-loop, ch 4, cluster over cluster) twice. End ch 4.
-<br><b>Rnd 93:</b> * Cluster over cluster, (cluster over cluster, ch 5, sc over sc, ch 5) twice; cluster over cluster, ch 2, (cluster over cluster, ch 5, 
-sc over sc, ch 5) twice.
-<br><b>Rnd 94:</b> * Cluster over cluster, ch 1, (cluster over cluster, ch 10) twice; cluster over cluster, ch 1, cluster in next sp, ch 1, (cluster over 
-cluster, ch 10) twice.
-<br><b>Rnd 95:</b> * Cluster over cluster, ch 2, (cluster over cluster, ch 4, sc in next loop, ch 4) twice; (cluster over cluster, ch 2) twice; (cluster 
-over cluster, ch 4, sc in next loop, ch 4) twice.
-<br><b>Rnd 96:</b> * Cluster over cluster, ch 3, (cluster over cluster, ch 5, sc over sc, ch 5) twice; (cluster over cluster, ch 3) twice; (cluster over 
-cluster, ch 5, sc over sc, ch 5) twice.
+<br><b>Rnd 92:</b> Cluster over cluster, * (cluster over cluster, ch 4, sc in next loop, ch 4) twice; make 2 clusters in next cluster, (ch 4, sc in next loop, ch 4, cluster over cluster) twice. End ch 4.
+<br><b>Rnd 93:</b> * Cluster over cluster, (cluster over cluster, ch 5, sc over sc, ch 5) twice; cluster over cluster, ch 2, (cluster over cluster, ch 5, sc over sc, ch 5) twice.
+<br><b>Rnd 94:</b> * Cluster over cluster, ch 1, (cluster over cluster, ch 10) twice; cluster over cluster, ch 1, cluster in next sp, ch 1, (cluster over cluster, ch 10) twice.
+<br><b>Rnd 95:</b> * Cluster over cluster, ch 2, (cluster over cluster, ch 4, sc in next loop, ch 4) twice; (cluster over cluster, ch 2) twice; (cluster over cluster, ch 4, sc in next loop, ch 4) twice.
+<br><b>Rnd 96:</b> * Cluster over cluster, ch 3, (cluster over cluster, ch 5, sc over sc, ch 5) twice; (cluster over cluster, ch 3) twice; (cluster over cluster, ch 5, sc over sc, ch 5) twice.
 <br><b>Rnd 97:</b> * Cluster over cluster, ch 8. 
 <br><b>Rnd 98:</b> * Cluster over cluster, ch 3, sc in next loop, ch 3.
 <br><b>Rnd 99:</b> * Cluster over cluster, ch 4, inc loop in next sc, ch 4, (cluster over cluster, ch 4, sc over sc, ch 4) 6 times.
 <br><b>Rnd 100:</b> * Cluster over cluster, ch 6, sc in next inc loop, ch 6, (cluster over cluster, ch 8) 6 times.
-<br><b>Rnd 101:</b> * Cluster over cluster, ch 3, sc in next loop, ch 3, cluster in next sc, ch 3, sc in next loop, ch 3, (cluster over cluster, ch 3, sc 
-in next loop, ch 3) 6 times.
+<br><b>Rnd 101:</b> * Cluster over cluster, ch 3, sc in next loop, ch 3, cluster in next sc, ch 3, sc in next loop, ch 3, (cluster over cluster, ch 3, sc in next loop, ch 3) 6 times.
 <br><b>Rnd 102:</b> * Cluster over cluster, ch 4, sc over sc, ch 4.
-Next 5 <br><b>Rnds:</b> Repeat 97th , 98th, 102nd, 97th and 98th Rnds.
+<br><b>Next 5 Rnds:</b> Repeat 97th , 98th, 102nd, 97th and 98th Rnds.
 <br><b>Rnd 108:</b> (Cluster over cluster, ch 4, sc over sc, ch 4) 4 times; * cluster over cluster, ch 4, sc over sc, ch 1, ch-9 p stem in next 
 cluster, ch 1, sc over sc, ch 4, sc over sc, ch 4, (cluster over cluster, ch 4, sc over sc, ch 4) 6 times. End ch 4. Break off and fasten. 
 Attach thread to 4th cluster on Rnd.
-<br><b>Rnd 109:</b> * Cluster over cluster, ch 8, cluster over cluster, ch 1, 18 tr in next p stem loop, ch 1, skip next sc (cluster over cluster, ch 8) 
-5 times.
-<br><b>Rnd 110:</b> * Cluster over cluster, ch 4, sc in next loop, (ch 1, tr in next tr) 18 times; ch 1, sc in next loop, ch 4, (cluster over cluster, ch 
-3, sc in next loop, ch 3) 4 times.
-<br><b>Rnd 111:</b> * Cluster over cluster, ch 4, skip next tr, sc in next sp, (ch 5, sc in next sp)16 times; ch 4, (cluster over cluster, ch 4, sc over 
-sc, ch 4) twice; cluster shell over cluster, ch 4, sc over sc, ch 4, cluster over cluster, ch 4, sc over sc, ch 4.
+<br><b>Rnd 109:</b> * Cluster over cluster, ch 8, cluster over cluster, ch 1, 18 tr in next p stem loop, ch 1, skip next sc (cluster over cluster, ch 8) 5 times.
+<br><b>Rnd 110:</b> * Cluster over cluster, ch 4, sc in next loop, (ch 1, tr in next tr) 18 times; ch 1, sc in next loop, ch 4, (cluster over cluster, ch 3, sc in next loop, ch 3) 4 times.
+<br><b>Rnd 111:</b> * Cluster over cluster, ch 4, skip next tr, sc in next sp, (ch 5, sc in next sp)16 times; ch 4, (cluster over cluster, ch 4, sc over sc, ch 4) twice; cluster shell over cluster, ch 4, sc over sc, ch 4, cluster over cluster, ch 4, sc over sc, ch 4.
 <br><b>Rnd 112:</b> * Cluster over cluster, ch 4, make p loops, ch 4, (cluster over cluster, ch 7) 5 times.
 <br><b>Rnd 113:</b> * Cluster over cluster, ch 4, make p loops, ch 4, (cluster over cluster, ch 3, sc in next loop, ch 3) 5 times.
 <br><b>Rnd 114:</b> * Cluster over cluster, ch 4, make p loops, ch 4, (cluster over cluster, ch 4, sc over sc, ch 4) 5 times.
@@ -169,8 +122,7 @@ sc, ch 4) twice; cluster shell over cluster, ch 4, sc over sc, ch 4, cluster ove
 <br><b>Rnd 117:</b> * Cluster over cluster, ch 5, make p loops, ch 5, (cluster over cluster, ch 4, sc over sc, ch 4) 5 times.
 <br><b>Rnd 118:</b> * Cluster over cluster, ch 5, make p loops, ch 5, (cluster over cluster, ch 9) 5 times.
 <br><b>Rnd 119:</b> * Cluster over cluster, ch 5, make p loops, ch 5, (cluster over cluster, ch 4, sc in next loop, ch 4) 5 times.
-<br><b>Rnd 120:</b> * Cluster over cluster, ch 5, make p loops, ch 5, (cluster over cluster, ch 4, sc over sc, ch 4) twice; cluster over cluster, ch 4, 
-inc loop in next sc, ch 4, (cluster over cluster, ch 4, sc over sc, ch 4) twice.                         
+<br><b>Rnd 120:</b> * Cluster over cluster, ch 5, make p loops, ch 5, (cluster over cluster, ch 4, sc over sc, ch 4) twice; cluster over cluster, ch 4, inc loop in next sc, ch 4, (cluster over cluster, ch 4, sc over sc, ch 4) twice.                         
 <br><b>Rnd 121:</b> * Cluster over cluster , ch 5, make p loops, ch 5, (cluster over cluster, ch 10) 3 times; sc in next inc loop, ch 10, (cluster 
 over cluster, ch 10) twice.
 <br><b>Rnd 122:</b> * Cluster over cluster, ch 5, make p loops, ch 5, (cluster over cluster, ch 4, sc in next loop, ch 4) 3 times; cluster in next sc, 
@@ -190,36 +142,13 @@ cluster, ch 4, sc in next loop, ch 4, (cluster over cluster, ch 5, sc in next lo
 ch 5.
 Break off and fasten. Press.
 
-
-
-
-
-
-
+<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<br><br>
-
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-
+</font> 
 </td></tr></table></center>
-
-
-
-</body>
-
-</html>
-
+</body></html>
 
 
 
