--- a/tablecloths/starw.html
+++ b/tablecloths/starw.html
@@ -2,10 +2,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Star Wheel Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
+<center><table width="90%" border="0"><tr><td>
 
 <p align="right"><a href="https://drive.google.com/uc?id=19EHFRMnQW5C_wAySlfNr9LTGZAAoclit&export=download&export=download"><img src="images/starw.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Star Wheel Tablecloth - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Star Wheel Tablecloth</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 
 <br>
@@ -42,9 +42,7 @@ Choose one of the following-threads in size 20, White or Ecru: Clark's 0.N.T Mer
 <br><br>
 <img src="images/starw2.jpg">
 <br><br>
-
-
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
