--- a/tablecloths/will.html
+++ b/tablecloths/will.html
@@ -2,10 +2,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Will O Wisp Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
+<center><table width="90%" border="0"><tr><td>
 
 <p align="right"><a href="https://drive.google.com/uc?id=1qSOa_XamILzEDbD_O2gD_H-KdW9bXmsF&export=download&export=download"><img src="images/will.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Will-O'-Wisp Tablecloth - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Will-O'-Wisp Tablecloth Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 
 <br>Clark's Big Ball Mercerized crochet, size 30, 28 balls of White or Ecru, or 31 balls of any color.
@@ -34,7 +34,7 @@
 <br><br>
 
 
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
